--- a/App/app/src/main/res/layout/settings_page.xml
+++ b/App/app/src/main/res/layout/settings_page.xml
@@ -56,7 +56,7 @@
                     android:layout_height="48dp"
                     android:checked="true"
                     android:minHeight="48dp"
-                    android:padding="12dp"
+                    android:padding="8dp"
                     android:text="@string/radio_button_lb" />
 
                 <RadioButton
@@ -69,49 +69,41 @@
                     android:text="@string/radio_button_kg" />
             </RadioGroup>
 
-            <LinearLayout
+            <!-- Racquet Head Size Input -->
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
+                android:layout_marginBottom="8dp"
+                android:labelFor="@+id/et_racquet_head_size"
+                android:text="@string/racquet_head_size_sq_in_label" />
 
-                <!-- Racquet Head Size Input -->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:labelFor="@+id/et_racquet_head_size"
-                    android:text="@string/racquet_head_size_sq_in_label" />
+            <EditText
+                android:id="@+id/et_racquet_head_size"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="16dp"
+                android:autofillHints="headSize"
+                android:inputType="numberDecimal"
+                android:maxWidth="200dp"
+                android:text="@string/racquet_head_size_100" />
 
-                <EditText
-                    android:id="@+id/et_racquet_head_size"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginBottom="16dp"
-                    android:autofillHints="headSize"
-                    android:inputType="numberDecimal"
-                    android:maxWidth="200dp"
-                    android:text="@string/racquet_head_size_100" />
+            <!-- String Mass Density Input -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:labelFor="@+id/et_string_mass_density"
+                android:text="@string/string_mass_density_g_m_label" />
 
-                <!-- String Mass Density Input -->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:labelFor="@+id/et_string_mass_density"
-                    android:text="@string/string_mass_density_g_m_label" />
-
-                <EditText
-                    android:id="@+id/et_string_mass_density"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginBottom="16dp"
-                    android:autofillHints="stringMassDensity"
-                    android:inputType="numberDecimal"
-                    android:maxWidth="200dp"
-                    android:text="@string/string_mass_density" />
-
-            </LinearLayout>
+            <EditText
+                android:id="@+id/et_string_mass_density"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="16dp"
+                android:autofillHints="stringMassDensity"
+                android:inputType="numberDecimal"
+                android:maxWidth="200dp"
+                android:text="@string/string_mass_density" />
 
             <Button
                 android:id="@+id/button_save"
@@ -121,9 +113,6 @@
                 android:text="@string/button_save"
                 app:layout_anchor="@id/appBarLayout"
                 app:layout_anchorGravity="bottom|start" />
-
         </LinearLayout>
     </ScrollView>
-
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
