--- a/App/app/src/main/res/layout/racquet_list.xml
+++ b/App/app/src/main/res/layout/racquet_list.xml
@@ -25,7 +25,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/racquets_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_racquet"
