--- a/App/app/src/main/res/values/themes.xml
+++ b/App/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Tennis_tune" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
@@ -22,4 +22,10 @@
     <style name="Theme.Tennis_tune.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Tennis_tune.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="DeleteButton" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@android:color/holo_red_light</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
