--- a/App/app/src/main/res/layout/racquet_list_item.xml
+++ b/App/app/src/main/res/layout/racquet_list_item.xml
@@ -10,30 +10,41 @@
 
     <!-- Layout that will be shown when swiped -->
     <LinearLayout
-        android:layout_width="120dp"
-        android:layout_height="match_parent"
+        android:layout_width="128dp"
+        android:layout_height="64dp"
         android:layout_gravity="start"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/deleteButton"
-            style="@style/DeleteButton"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/editButton"
+            android:layout_width="64dp"
             android:layout_height="match_parent"
-            android:text="@string/delete" />
+            android:background="@android:color/holo_orange_dark"
+            android:contentDescription="@string/edit_this_racquet"
+            android:padding="16dp"
+            android:src="@drawable/baseline_edit_24" />
+
+        <ImageView
+            android:id="@+id/deleteButton"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/holo_red_dark"
+            android:contentDescription="@string/delete_this_racquet"
+            android:padding="16dp"
+            android:src="@drawable/baseline_delete_24" />
     </LinearLayout>
 
     <!-- Main layout of the list item -->
     <FrameLayout
         android:id="@+id/racquetListItem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:background="@android:color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/racquet_list_item_check"
@@ -49,12 +60,11 @@
 
             <TextView
                 android:id="@+id/racquet_list_item_racquet_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginStart="48dp"
                 android:layout_marginEnd="16dp"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp"
+                android:gravity="center|start"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
