--- a/App/app/src/main/res/layout/racquet_list.xml
+++ b/App/app/src/main/res/layout/racquet_list.xml
@@ -16,7 +16,7 @@
             android:id="@+id/top_bar_settings"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="?attr/colorPrimaryVariant"
             app:popupTheme="@style/Theme.Tennis_tune.PopupOverlay"
             app:title="@string/racquets" />
 
