--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_dark">#1B1A1A</color>
+    <color name="gray">#808080</color>
+    <color name="gray_light">#D3D3D3</color>
 </resources>
